--- a/index.html
+++ b/index.html
@@ -254,9 +254,6 @@
       <a href="#savethedate">Save the Date</a>
       <a href="#entourage">Entourage</a>
       <a href="#location">Location</a>
-      <a href="#registry">Registry</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -341,11 +338,11 @@
         <div class="single-box-container">
             
             <div class="single-content-box">
-                <img src="Entourage list 1.png" alt="Our Entourage List - Part 1">
+                <img src="Entourage list.png" alt="Our Entourage List - Part 1">
             </div>
             
             <div class="single-content-box">
-                <img src="Entourage list 2.png" alt="Our Entourage List - Part 2">
+                <img src="Entourage listt.png" alt="Our Entourage List - Part 2">
             </div>
         </div>
         <p class="video-caption" style="margin-top: 20px;">Meet our cherished entourage — the people who’ll stand beside us.</p>
@@ -381,3 +378,4 @@
 
 </body>
 </html>
+
