--- a/index.html
+++ b/index.html
@@ -269,9 +269,6 @@
       <a href="#savethedate">Save the Date</a>
       <a href="#entourage">Entourage</a>
       <a href="#location">Location</a>
-      <a href="#registry">Registry</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -312,7 +309,7 @@
         <div class="divider"></div>
         <div class="moodboard-container">
           <div class="moodboard-item">
-            <img src="Mood Board.png" alt="Mood Board"> 
+            <img src="Mood Board Finaal.png" alt="Mood Board"> 
           </div>
         </div>
     </div>
@@ -396,3 +393,4 @@
 
 </body>
 </html>
+
