--- a/index.html
+++ b/index.html
@@ -265,10 +265,11 @@
     <p class="tagline">Under the twilight sky, we say "I Do"<br>Amid the whispers of the woods, we promise forever.</p>
     <nav>
       <a href="#event">Event</a>
+      <a href="#location">Location</a>
+      <a href="#moodboard">Mood Board</a>
       <a href="#rsvp">RSVP</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#entourage">Entourage</a>
-      <a href="#location">Location</a>
     </nav>
   </header>
 
@@ -393,4 +394,5 @@
 
 </body>
 </html>
+
 
