--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="divider"></div>
         <div class="moodboard-container">
           <div class="moodboard-item">
-            <img src="Mood Board Finaal.png" alt="Mood Board"> 
+            <img src="Mood Board.png" alt="Mood Board"> 
           </div>
         </div>
     </div>
@@ -415,4 +415,3 @@
 
 </body>
 </html>
-
