Enhance monogram size and responsive styles
Increased the size of the monogram image and adjusted styles for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       align-items: center;
     }
     
-    /* Monogram Image */
+    /* Monogram Image (INCREASED SIZE) */
     .monogram {
-        height: 500px; 
+        height: 650px; /* Increased from 500px to 650px */
         width: auto;
         margin: 50px 0 20px 0; 
         transition: height 0.3s; 
@@ -76,10 +76,8 @@
     
     /* SPECIFIC STYLE: Only the "Our Entourage" H2 gets the script font */
     #entourage h2 {
-      /* Placeholder for Brittany. Change 'Dancing Script' to 'Brittany' 
-         once the correct font is linked/imported. */
       font-family: 'Dancing Script', cursive; 
-      font-size: 3.5rem; /* Make the script font nice and large */
+      font-size: 3.5rem; 
     }
 
 
@@ -255,7 +253,7 @@
 
         /* Adjusted Monogram size for mobile */
         .monogram {
-            height: 250px; 
+            height: 350px; /* Increased mobile size for the larger look */
             margin-top: 20px;
         }
 
@@ -441,4 +439,3 @@
 
 </body>
 </html>
-
