--- a/index.html
+++ b/index.html
@@ -51,10 +51,20 @@
     
     /* Monogram Image (INCREASED SIZE) */
     .monogram {
-        height: 850px; /* Increased from 500px to 650px */
+        height: 650px; 
         width: auto;
         margin: 50px 0 20px 0; 
         transition: height 0.3s; 
+    }
+
+    /* Adjusting the visible audio player so it doesn't interrupt the design much */
+    audio {
+        position: absolute; /* Place it in a fixed spot */
+        top: 10px;
+        right: 10px;
+        width: 200px;
+        opacity: 0.7; /* Make it slightly transparent */
+        z-index: 10; /* Ensure it's always on top */
     }
 
     nav {
@@ -69,7 +79,7 @@
     
     /* DEFAULT H2 STYLE (for all other sections) */
     section h2 {
-        font-family: 'Georgia', serif; /* Use default font */
+        font-family: 'Georgia', serif; 
         font-size: 2rem;
         margin-top: 0;
     }
@@ -253,7 +263,7 @@
 
         /* Adjusted Monogram size for mobile */
         .monogram {
-            height: 350px; /* Increased mobile size for the larger look */
+            height: 350px; 
             margin-top: 20px;
         }
 
@@ -272,6 +282,13 @@
           font-size: 1.8rem;
         }
 
+        /* Mobile adjustment for audio player */
+        audio {
+            width: 100%;
+            top: 0;
+            left: 0;
+            opacity: 1;
+        }
 
         .tagline {
             font-size: 1.1rem;
@@ -305,6 +322,11 @@
   </style>
 </head>
 <body>
+  
+  <audio autoplay loop controls>
+    <source src="Song.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
 
   <header>
     <img src="Monogram.png" alt="Aaron & Jade Monogram" class="monogram">
@@ -370,7 +392,7 @@
           Kindly confirm your attendance by clicking the button below:
         </p>
         <p class="rsvp-instruction">
-          ✦ Please make sure to enter your <strong>Full Name</strong> in the format <em>FirstName LastName (FN LN)</em> when submitting your RSVP.
+          ✦ Please make sure to enter your **Full Name** in the format *FirstName LastName (FN LN)* when submitting your RSVP.
         </p>
         <a class="rsvp-btn" href="https://theknot.com/aaronandjadeweddingweekend" target="_blank">Confirm Your Attendance</a>
     </div>
@@ -439,4 +461,3 @@
 
 </body>
 </html>
-
