Fix HTML encoding issues and clean up structure

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     /* Monogram Image (INCREASED DESKTOP SIZE) */
     .monogram {
-        height: 800px; /* **UPDATED FOR DESKTOP: Increased from 650px** */
+        height: 800px; 
         width: auto;
         margin: 50px 0 20px 0; 
         transition: height 0.3s; 
@@ -268,7 +268,7 @@
 
         /* Adjusted Monogram size for mobile (FIXED SIZE) */
         .monogram {
-            height: 350px; /* **UPDATED FOR MOBILE: Increased from 250px** */
+            height: 250px; 
             margin-top: 20px;
         }
 
@@ -404,7 +404,6 @@
           ✦ Please make sure to enter your **Full Name** in the format *FirstName LastName (FN LN)* when submitting your RSVP.
         </p>
         <a class="rsvp-btn" href="https://theknot.com/aaronandjadeweddingweekend" target="_blank">Confirm Your Attendance</a>
-        
     </div>
   </section>
   
