--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       align-items: center;
     }
     
-    /* Monogram Image (INCREASED DESKTOP SIZE) */
+    /* Monogram Image (ORIGINAL SIZE: 650px) */
     .monogram {
         height: 650px; 
         width: auto;
@@ -266,7 +266,7 @@
             padding: 20px 15px 30px; 
         }
 
-        /* Adjusted Monogram size for mobile (FIXED SIZE) */
+        /* Adjusted Monogram size for mobile (ORIGINAL SIZE: 250px) */
         .monogram {
             height: 250px; 
             margin-top: 20px;
