--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       flex-direction: column;
       justify-content: center; 
       align-items: center;
+      /* CRITICAL FIX: Ensure full width and correct padding calculation */
+      width: 100%; 
+      box-sizing: border-box; 
     }
     
     /* Monogram Image (RESTORED ORIGINAL DESKTOP SIZE) */
@@ -404,6 +407,7 @@
           ✦ Please make sure to enter your **Full Name** in the format *FirstName LastName (FN LN)* when submitting your RSVP.
         </p>
         <a class="rsvp-btn" href="https://theknot.com/aaronandjadeweddingweekend" target="_blank">Confirm Your Attendance</a>
+            
     </div>
   </section>
   
