--- a/index.html
+++ b/index.html
@@ -374,9 +374,10 @@
     <nav>
       <a href="#event">Event</a>
       <a href="#rsvp">RSVP</a>
-      <a href="#giftguide">Gift Guide</a> <a href="#location">Location</a>
+      <a href="#location">Location</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#entourage">Entourage</a>
+      <a href="#giftguide">Gift Guide</a> 
       <a href="#moodboard">Mood Board</a>
     </nav>
   </header>
@@ -512,3 +513,4 @@
 
 </body>
 </html>
+
