--- a/index.html
+++ b/index.html
@@ -266,8 +266,9 @@
       color: #ffddaa;
       font-style: italic;
     }
-    /* Adjusted caption margin for new placement in Entourage */
-    #entourage .video-caption {
+    /* Adjusted caption margin for placement under the header */
+    #entourage .video-caption, 
+    #savethedate .video-caption { /* ADDED #savethedate here */
         margin-top: 5px;
         margin-bottom: 30px;
     }
@@ -382,10 +383,10 @@
     <nav>
       <a href="#event">Event</a>
       <a href="#rsvp">RSVP</a>
-      <a href="#giftguide">Gift Guide</a>
       <a href="#location">Location</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#entourage">Entourage</a>
+      <a href="#giftguide">Gift Guide</a>
       <a href="#moodboard">Mood Board</a>
     </nav>
   </header>
@@ -438,16 +439,18 @@
     <div class="content-wrapper">
         <h2>Save the Date</h2>
         <div class="divider"></div>
+        
+        <p class="video-caption" style="margin-top: 5px; margin-bottom: 30px;">A glimpse of our journey — we can’t wait to celebrate with you!</p>
+
         <div class="single-box-container">
             <div class="single-content-box">
                 <video controls muted loop>
                     <source src="savethedate.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
             </div>
         </div>
-    </div>
+        </div>
   </section>
 
   <section id="entourage">
