--- a/index.html
+++ b/index.html
@@ -362,9 +362,9 @@
 
   <section id="savethedate">
     <div class="content-wrapper">
-        <h2>Save the Date</h2>
+        <h2>Sneak Peek</h2>
         <div class="divider"></div>
-        <p class="video-caption">A glimpse of our journey — we can’t wait to celebrate with you!</p>
+        <p class="video-caption">We can’t wait to celebrate with you!</p>
         <div class="slideshow-container">
             <div class="mySlides"><img src="1.jpg"></div>
             <div class="mySlides"><img src="2.jpg"></div>
@@ -457,10 +457,6 @@
     <div class="content-wrapper">
         <h2>Mood Board & Color Motifs</h2>
         <div class="divider"></div>
-        <p class="guideline-text" style="margin-bottom: 20px;">
-          To help keep our celebration cohesive, we invite you to draw inspiration from our color palette: 
-          earthy neutrals, dusty rose, and deep magenta.
-        </p>
         <div class="moodboard-item">
           <img src="Mood Board Finaal.png" alt="Wedding Mood Board showing rustic and magenta tones"> 
         </div>
@@ -514,3 +510,4 @@
 
 </body>
 </html>
+
