--- a/index.html
+++ b/index.html
@@ -283,6 +283,36 @@
         <div class="slideshow-container">
             <div class="mySlides"><img src="1.jpg"></div>
             <div class="mySlides"><img src="2.jpg"></div>
+            <div class="mySlides"><img src="3.jpg"></div>
+            <div class="mySlides"><img src="4.jpg"></div>
+            <div class="mySlides"><img src="5.jpg"></div>
+            <div class="mySlides"><img src="6.jpg"></div>
+            <div class="mySlides"><img src="7.jpg"></div>
+            <div class="mySlides"><img src="8.jpg"></div>
+            <div class="mySlides"><img src="9.jpg"></div>
+            <div class="mySlides"><img src="10.jpg"></div>
+            <div class="mySlides"><img src="11.jpg"></div>
+            <div class="mySlides"><img src="12.jpg"></div>
+            <div class="mySlides"><img src="13.jpg"></div>
+            <div class="mySlides"><img src="14.jpg"></div>
+            <div class="mySlides"><img src="15.jpg"></div>
+            <div class="mySlides"><img src="16.jpg"></div>
+            <div class="mySlides"><img src="17.jpg"></div>
+            <div class="mySlides"><img src="18.jpg"></div>
+            <div class="mySlides"><img src="19.jpg"></div>
+            <div class="mySlides"><img src="20.jpg"></div>
+            <div class="mySlides"><img src="21.jpg"></div>
+            <div class="mySlides"><img src="22.jpg"></div>
+            <div class="mySlides"><img src="23.jpg"></div>
+            <div class="mySlides"><img src="24.jpg"></div>
+            <div class="mySlides"><img src="25.jpg"></div>
+            <div class="mySlides"><img src="26.jpg"></div>
+            <div class="mySlides"><img src="27.jpg"></div>
+            <div class="mySlides"><img src="28.jpg"></div>
+            <div class="mySlides"><img src="29.jpg"></div>
+            <div class="mySlides"><img src="30.jpg"></div>
+            <div class="mySlides"><img src="31.jpg"></div>
+            <div class="mySlides"><img src="32.jpg"></div>
             <button class="prev" onclick="plusSlides(-1)">❮</button>
             <button class="next" onclick="plusSlides(1)">❯</button>
         </div>
@@ -404,3 +434,4 @@
 
 </body>
 </html>
+
