--- a/index.html
+++ b/index.html
@@ -345,13 +345,26 @@
     </div>
   </section>
 
-  <section id="moodboard">
+<section id="moodboard">
     <div class="content-wrapper">
         <h2>Mood Board & Color Motifs</h2>
         <div class="divider"></div>
-        <div class="moodboard-item"><img src="Mood Board Finaal.png" alt="Mood Board"></div>
+
+        <div class="moodboard-container">
+            <h3>For Principal Sponsors</h3>
+            <div class="moodboard-item">
+                <img src="Mood Board Finaal.png" alt="Mood Board for Principal Sponsors">
+            </div>
+        </div>
+
+        <div class="moodboard-container">
+            <h3>For Guests</h3>
+            <div class="moodboard-item">
+                <img src="Mood Board Finaaal.png" alt="Mood Board for Guests">
+            </div>
+        </div>
     </div>
-  </section>
+</section>
 
   <section id="rsvp">
     <div class="content-wrapper">
@@ -434,4 +447,5 @@
 
 </body>
 </html>
+
 
