--- a/index.html
+++ b/index.html
@@ -353,14 +353,14 @@
         <div class="moodboard-container">
             <h3>For Guests</h3>
             <div class="moodboard-item">
-                <img src="Mood Board Finaaal.png" alt="Mood Board for Guests">
+                <img src="Mood Board Finaaal.png" alt="Mood Board for Guests" style="width: 70%; max-width: 500px; margin: 0 auto; display: block;">
             </div>
         </div>
 
         <div class="moodboard-container">
             <h3>For Principal Sponsors</h3>
             <div class="moodboard-item">
-                <img src="Mood Board Finaal.png" alt="Mood Board for Principal Sponsors">
+                <img src="Mood Board Finaal.png" alt="Mood Board for Principal Sponsors" style="width: 100%; display: block;">
             </div>
         </div>
     </div>
@@ -447,6 +447,7 @@
 
 </body>
 </html>
+
 
 
 
