--- a/index.html
+++ b/index.html
@@ -349,20 +349,16 @@
     <div class="content-wrapper">
         <h2>Mood Board & Color Motifs</h2>
         <div class="divider"></div>
-
         <div class="moodboard-container">
             <h3>For Guests</h3>
             <div class="moodboard-item">
-                <img src="Mood Board Finaaal.png" alt="Mood Board for Guests" 
-                     style="width: 70%; max-width: 500px; margin: 0 auto; display: block; mix-blend-mode: multiply;">
+                <img src="Mood Board Finaaal.png" alt="Mood Board for Guests" style="width: 70%; max-width: 500px; margin: 0 auto; display: block;">
             </div>
         </div>
-
         <div class="moodboard-container">
             <h3>For Principal Sponsors</h3>
             <div class="moodboard-item">
-                <img src="Mood Board Finaal.png" alt="Mood Board for Principal Sponsors" 
-                     style="width: 100%; display: block;">
+                <img src="Mood Board Finaal.png" alt="Mood Board for Principal Sponsors" style="width: 100%; display: block;">
             </div>
         </div>
     </div>
@@ -449,6 +445,7 @@
 
 </body>
 </html>
+
 
 
 
