--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
             <h3>For Guests</h3>
             <div class="moodboard-item">
                 <img src="Mood Board Finaaal.png" alt="Mood Board for Guests" style="width: 70%; max-width: 500px; margin: 0 auto; display: block;">
+                <img src="Mood Board Finaaaal.png" alt="Mood Board for Guests" style="width: 70%; max-width: 500px; margin: 0 auto; display: block;">
             </div>
         </div>
         <div class="moodboard-container">
@@ -445,6 +446,7 @@
 
 </body>
 </html>
+
 
 
 
