Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -348,14 +348,16 @@
 <section id="moodboard">
     <div class="content-wrapper">
         <h2>Mood Board & Color Motifs</h2>
+        <p style="text-align: center; font-weight: bold; margin-top: 15px; letter-spacing: 1px;">STRICTLY FORMAL ATTIRE</p>
         <div class="divider"></div>
+        
         <div class="moodboard-container">
             <h3>For Guests</h3>
             <div class="moodboard-item">
-                <img src="Mood Board Finaaal.png" alt="Mood Board for Guests" style="width: 70%; max-width: 500px; margin: 0 auto; display: block;">
-                <img src="Mood Board Finaaaal.png" alt="Mood Board for Guests" style="width: 70%; max-width: 500px; margin: 0 auto; display: block;">
+                <img src="Mood Board Finaaaal.png" alt="Mood Board for Guests" style="width: 90%; max-width: 800px; margin: 0 auto; display: block;">
             </div>
         </div>
+
         <div class="moodboard-container">
             <h3>For Principal Sponsors</h3>
             <div class="moodboard-item">
@@ -446,6 +448,7 @@
 
 </body>
 </html>
+
 
 
 
