Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
         <div class="moodboard-container">
             <h3>For Guests</h3>
             <div class="moodboard-item">
+                <img src="Mood Board Finaaal.png" alt="Mood Board for Guests" style="width: 90%; max-width: 800px; margin: 0 auto; display: block;">              
                 <img src="Mood Board Finaaaal.png" alt="Mood Board for Guests" style="width: 90%; max-width: 800px; margin: 0 auto; display: block;">
             </div>
         </div>
@@ -448,6 +449,7 @@
 
 </body>
 </html>
+
 
 
 
