--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 <section id="moodboard">
     <div class="content-wrapper">
         <h2>Mood Board & Color Motifs</h2>
-        <p style="text-align: center; font-weight: bold; margin-top: 15px; letter-spacing: 1px;">STRICTLY FORMAL ATTIRE</p>
+        <p style="text-align: center; font-weight: bold; margin-top: 15px; letter-spacing: 1px;">STRICTLY FORMAL ATTIRE IN THESE COLORS</p>
         <div class="divider"></div>
         
         <div class="moodboard-container">
@@ -449,6 +449,7 @@
 
 </body>
 </html>
+
 
 
 
