--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div class="content-wrapper">
         <h2>Countdown</h2>
         <div class="divider"></div>
-        <div class="event-date">April 16, 2026, 3:00 PM</div>
+        <div class="event-date">April 16, 2026</div>
         <div id="countdown"></div>
     </div>
   </section>
@@ -251,6 +251,7 @@
             <img src="church.jpg" alt="Our Lady of Lourdes Parish">
             <h3>Our Lady of Lourdes Parish</h3>
             <p>Our wedding ceremony will be held at the church.</p>
+            <p>(Ceremony will start at 3:00 PM)</p>
             <a class="guide-btn" href="https://maps.google.com" target="_blank">Guide</a>
           </div>
           <div class="location-card">
@@ -449,6 +450,7 @@
 
 </body>
 </html>
+
 
 
 
